# Chatbot-CrewAI

./: .gitignore  Chatbot.py  Chatbot_Version_1.py  Mail_Agent.py  leads.db  pyproject.toml  requirements.txt
data/vectorStores/store/: index.faiss  index.pkl
templates/: index_MAIL.html  interface.html
